--- a/french/static/french/css/custom.css
+++ b/french/static/french/css/custom.css
@@ -48,5 +48,5 @@ div.container-fluid {
 
 
 body {
-font-family: 'klee','Optima','Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴシック',sans-serif
+font-family: 'klee','Segoe UI','EuphemiaUCAS','Avenir Next','Optima','Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴシック',sans-serif
 }
