--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -30,7 +30,13 @@
     <div class="d-flex justify-content-center">
       <div class="d-flex row align-items-center">
         <div class="col">
-          <h6>Set conditions you'd like to practice, before start practice. </h6>
+          <ol>
+            <li>Click the flag of language you'd like to practice. </li>
+            <li>This leads you to "Set" page of the language you chose.</li>
+            <li>Check conditions you'd like to practice, then click "Set" button.</li>
+            <li>Go to "Practice" page by clicking "Practice" on Navigation Bar. </li>
+            <li>Then, start your practice !! </li>
+          </ol>
         </div>
       </div>
     </div>
@@ -39,7 +45,7 @@
       <div class="d-flex justify-content-center">
         <div class="d-flex row align-items-center" style="height:80px">
           <div class="col">
-              <a href="french/set_fr"><img src="static/home/images/frenchFrag.gif" alt="FrenchFrag"></a>
+            <a href="french/set_fr"><img src="static/home/images/frenchFrag.gif" alt="FrenchFrag"></a>
           </div>
         </div>
       </div>
