URI Error modified

--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -107,7 +107,7 @@
 
     <!-- ボタン -->
 
-    <form action="% url 'main_fr' %" method="post">
+    <form action="" method="post">
       {% csrf_token %}
 
 
