--- a/french/templates/french/set_fr.html
+++ b/french/templates/french/set_fr.html
@@ -20,6 +20,9 @@
 
   {% load crispy_forms_tags %}
 
+
+
+
   <!-- ヘッダ/Nav-Bar -->
 
 
@@ -58,7 +61,7 @@
 
 
 
-  <form action="% url 'set_fr' %" method="post">
+  <form action="" method="post">
     {% csrf_token %}
 
 
