Home modified, and file replaced

--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -21,25 +21,46 @@
 
   <div class="jumbotron ">
     <h1 class="display-4">GUTI !</h1>
-    <p class="lead"><strong>G</strong>et <strong>U</strong>sed <strong>T</strong>o <strong>I</strong>t (rater than lean) !</p>
+
     <hr class="my-4">
-    <p>The most pratical way to "install" conjugation into yourself.</p>
+    <p><h4>The most pratical way to "install" conjugation into yourself.</h4></p>
   </div>
 
-  <div class="container-fluid">
-    <div class="d-flex justify-content-center">
-      <div class="d-flex row align-items-center">
-        <div class="col">
-          <ol>
-            <li>Click the flag of language you'd like to practice. </li>
-            <li>This leads you to "Set" page of the language you chose.</li>
-            <li>Check conditions you'd like to practice, then click "Set" button.</li>
-            <li>Go to "Practice" page by clicking "Practice" on Navigation Bar. </li>
-            <li>Then, start your practice !! </li>
-          </ol>
-        </div>
-      </div>
-    </div>
+
+  <div class="container-sm">
+    <p><h2>Get Used To It rather than learn! </h2><br>
+      The name of this site "GUTI !" comes from this proverb.</p>
+
+    <p>One of the mosy difficult things in learning a foreign language is the verb conjugation. <br>The most pratical way to master this is simply to repeat using it over and over again, just like you've had your native language naturally. There is no better way than this.</p>
+
+    <p>This site provides you a ideal opportunitiy to do it.</p>
+
+    <p>Q&As are provided randomlly, according the conditions you set (i.e. level of words/mode/tense). As words are attentivelly selected (see "List" page), if you go to the final level, you can manster almost all types of conjugation.</p>
+
+    <p>Then all you have to do is to practice it repeatedly.</p>
+
+  </div>
+
+
+  <div class="container-sm">
+    <p><h5>How to use:</h5><br>
+  </div>
+
+  <div class="container-sm">
+    <ol>
+      <li>Click the flag of the language you'd like to practice. </li>
+      <li>This leads you to "Set" page of the language you chose.</li>
+      <li>Check conditions you'd like to practice, then click "Set" button.</li>
+      <li>Go to "Practice" page by clicking "Practice" on Navigation Bar. </li>
+      <li>Then, start your practice !! </li>
+      <li>For the next question, just click "Question" button again.</li>
+      <li>When you want to change conditions, go to "Set" page via Navigation Bar and go back to #3 above. </li>
+    </ol><br>
+</div>
+
+<div class="container-sm">
+  <p><h5>Now available :</h5>
+</div>
 
     <div class="container-fluid">
       <div class="d-flex justify-content-center">
