file name added_fr

--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -60,7 +60,7 @@
 
   <!-- 単語 -->
 
-  <div class="container-fluid">
+  <div class="container-sm">
     <div class="d-flex justify-content-center">
       <div class="d-flex row align-items-center" style="height:80px">
         <div class="col">
@@ -70,7 +70,7 @@
     </div>
 
     <!-- 人称／時制 -->
-    <div class="container-fluid">
+    <div class="container-sm">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-row">
           <div style="padding:0px;">
@@ -94,7 +94,7 @@
     </div>
 
     <!-- 答え -->
-    <div class="container-fluid">
+    <div class="container-sm">
       <div class="d-flex justify-content-center" style="height:120px">
         <div class="d-flex row align-items-center">
           <div class="col">
@@ -111,7 +111,7 @@
       {% csrf_token %}
 
 
-      <div class="container-fluid">
+      <div class="container-sm">
         <div class="d-flex justify-content-center">
           <div class="d-flex flex-row">
             <button type="submit" name="button_question" value="Question" class="btn btn-french-blue ">
