--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -31,11 +31,11 @@
     <p><h2>Get Used To It rather than learn! </h2><br>
       The name of this site "GUTI !" comes from this proverb.</p>
 
-    <p>One of the mosy difficult things in learning a foreign language is the verb conjugation. <br>The most pratical way to master this is simply to repeat using it over and over again, just like you've had your native language naturally. There is no better way than this.</p>
+    <p>One of the mosy difficult things in learning a foreign language is the verb conjugation. <br>The most pratical way to master this is using it over and over again, just like you've had your native language naturally. There is no better way than this.</p>
 
     <p>This site provides you a ideal opportunitiy to do it.</p>
 
-    <p>Q&As are provided randomlly, according the conditions you set (i.e. level of words/mode/tense). As words are attentivelly selected (see "List" page), if you go to the final level, you can manster almost all types of conjugation.</p>
+    <p>Q&As are provided randomlly, according to the conditions you set (i.e. level of words/mode/tense). As words are attentivelly selected (see "List" page), if you go thoroug all the level, you can manster almost all types of conjugation.</p>
 
     <p>Then all you have to do is to practice it repeatedly.</p>
 
