Home modified, files renamed

--- a/french/templates/french/list_fr.html
+++ b/french/templates/french/list_fr.html
@@ -5,6 +5,8 @@
 <head>
 
   <meta charset="utf-8">
+  <title>{{title}}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -14,7 +16,6 @@
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
 
-  <title>{{title}}</title>
 
 
 </head>
