--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -5,6 +5,8 @@
 <head>
 
   <meta charset="utf-8">
+  <title>{{title}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -14,36 +16,47 @@
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
 
-  <title>GUTI !</title>
+
 </head>
 
 <body>
 
   <div class="jumbotron ">
-    <h1 class="display-4">GUTI !</h1>
+    <div class="container-fluid">
+      <h1 class="display-4">GUTI !</h1>
 
-    <hr class="my-4">
-    <p><h4>The most pratical way to "install" conjugation into yourself.</h4></p>
+      <hr class="my-2">
+      <p>
+      <h5>An ideal tool to "install" conjugation into yourself.</h5>
+      </p>
+    </div>
   </div>
 
 
   <div class="container-sm">
-    <p><h2>Get Used To It rather than learn! </h2><br>
-      The name of this site "GUTI !" comes from this proverb.</p>
 
-    <p>One of the mosy difficult things in learning a foreign language is the verb conjugation. <br>The most pratical way to master this is using it over and over again, just like you've had your native language naturally. There is no better way than this.</p>
+    <p><h3>Get Used To It rather than learn! </h3></p>
 
-    <p>This site provides you a ideal opportunitiy to do it.</p>
+    <p>The name of this site "GUTI !" comes from this proverb.</p>
 
-    <p>Q&As are provided randomlly, according to the conditions you set (i.e. level of words/mode/tense). As words are attentivelly selected (see "List" page), if you go thoroug all the level, you can manster almost all types of conjugation.</p>
+    <p>
+      One of the difficulties in learning a foreign language is the verb conjugation.<br>
+      How the native speakers have obtained that of their native language ?<br>
+      Thet did't "learn" it.  They just "get used to it". In other words, they have "installed" it naturally through countless times of experiences.<br>
+    </p>
 
-    <p>Then all you have to do is to practice it repeatedly.</p>
+    <p>We provide you an ideal tool to simulate that.</p>
+
+    <p>Q&As of a verb are provided randomlly, according to the conditions you set (i.e. level of words/mode/tense). Verbs are attentivelly selected (see "List" page) to cover almost all types of conjugation.</p>
+
+    <p>Then all you have to do is just practicing it over and over again to "install" it into yourself. At anytime & anywhere. To your best satisfaction.</p>
 
   </div>
 
 
   <div class="container-sm">
-    <p><h5>How to use:</h5><br>
+    <p>
+    <h5>How to use:</h5><br>
   </div>
 
   <div class="container-sm">
@@ -56,20 +69,21 @@
       <li>For the next question, just click "Question" button again.</li>
       <li>When you want to change conditions, go to "Set" page via Navigation Bar and go back to #3 above. </li>
     </ol><br>
-</div>
+  </div>
 
-<div class="container-sm">
-  <p><h5>Now available :</h5>
-</div>
+  <div class="container-sm">
+    <p>
+    <h5>Now available :</h5>
+  </div>
 
-    <div class="container-fluid">
-      <div class="d-flex justify-content-center">
-        <div class="d-flex row align-items-center" style="height:80px">
-          <div class="col">
-            <a href="french/set_fr"><img src="static/home/images/frenchFrag.gif" alt="FrenchFrag"></a>
-          </div>
+  <div class="container-fluid">
+    <div class="d-flex justify-content-center">
+      <div class="d-flex row align-items-center" style="height:80px">
+        <div class="col">
+          <a href="french/set_fr"><img src="static/home/images/frenchFrag.gif" alt="FrenchFrag"></a>
         </div>
       </div>
+    </div>
 
 </body>
 
