--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -6,13 +6,15 @@
 
   <meta charset="utf-8">
 
+  <title>{{title}}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 
   <link rel="stylesheet" type="text/css" href={% static 'french/css/bootstrap.min.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
-  <title>{{title}}</title>
 
 </head>
 
@@ -60,7 +62,7 @@
 
   <!-- 単語 -->
 
-  <div class="container-sm">
+  <div class="container-f">
     <div class="d-flex justify-content-center">
       <div class="d-flex row align-items-center" style="height:80px">
         <div class="col">
@@ -104,34 +106,38 @@
       </div>
     </div>
 
+  <!-- ボタン -->
 
-    <!-- ボタン -->
-
-    <form action="" method="post">
-      {% csrf_token %}
+  <form action="" method="post">
+    {% csrf_token %}
 
 
-      <div class="container-sm">
-        <div class="d-flex justify-content-center">
-          <div class="d-flex flex-row">
-            <button type="submit" name="button_question" value="Question" class="btn btn-french-blue ">
-              Question
-            </button>
-            <button type="submit" name="button_answer" value="Answer" class="btn btn-french-red ">
-              Answer
-            </button>
-          </div>
+    <div class="container-fluid">
+
+      <div class="d-flex justify-content-center">
+      <div class="col-6 text-right">
+          <button type="submit" name="button_question" value="Question" class="btn btn-french-blue ">
+            Question
+          </button>
+
+        </div>
+        <div class="col-6 text-left">
+          <button type="submit" name="button_answer" value="Answer" class="btn btn-french-red">
+            Answer
+          </button>
+        </div>
         </div>
       </div>
+    </div>
 
 
 
 
-    </form>
+  </form>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 
 </body>
