--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -25,14 +25,17 @@
   <!-- ヘッダ /jumbotron-->
 
   <div class="jumbotron jumbotron-extend">
+
     <div class="container-fluid jumbotron-container">
+          <div class="vh-10">
       <h4 class="site-name">Habituez-vous<p>plustôt que d'apprendre !</h4>
       <p></p>
     </div>
+        </div>
   </div>
 
   <!-- ヘッダ/Nav-Bar -->
-  <div class="container-fluid">
+
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="#">GUTI ! Français</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,12 +60,12 @@
         </ul>
       </div>
     </nav>
-  </div>
+
 
 
   <!-- 単語 -->
 
-  <div class="container-f">
+  <div class="container-fluid">
     <div class="d-flex justify-content-center">
       <div class="d-flex row align-items-center" style="height:80px">
         <div class="col">
@@ -72,7 +75,7 @@
     </div>
 
     <!-- 人称／時制 -->
-    <div class="container-sm">
+    <div class="container-fluid">
       <div class="d-flex justify-content-center">
         <div class="d-flex flex-row">
           <div style="padding:0px;">
@@ -96,7 +99,7 @@
     </div>
 
     <!-- 答え -->
-    <div class="container-sm">
+    <div class="container-fluid">
       <div class="d-flex justify-content-center" style="height:120px">
         <div class="d-flex row align-items-center">
           <div class="col">
@@ -123,7 +126,7 @@
         </div>
         <div class="col-6 text-left">
           <button type="submit" name="button_answer" value="Answer" class="btn btn-french-red">
-            Answer
+            Réponse
           </button>
         </div>
         </div>
