--- a/french/templates/french/set_fr.html
+++ b/french/templates/french/set_fr.html
@@ -26,8 +26,6 @@
 
   <!-- ヘッダ/Nav-Bar -->
 
-
-  <div class="container-fluid ">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="#">GUTI ! Français</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +56,7 @@
 
       </div>
     </nav>
-  </div>
+
 
 
 
@@ -68,8 +66,8 @@
 
     <div class="container-fluid">
 
-      <div class="row text-white mx-auto" style="background:#00249C">
-        Mode et Temps
+      <div class="row text-white mx-auto pl-10" style="background:#00249C">
+         Mode et Temps
       </div>
 
       <div class="row">
@@ -82,7 +80,7 @@
 
     <div class="container-fluid">
       <div class="row text-white mx-auto" style="background:#EF3340">
-        Mots
+        　Verbes
       </div>
       <div class="row">
         <div class="col-6 col-md-3">{{ form.ER|as_crispy_field }} </div>
