--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -21,11 +21,10 @@
 
 <body>
 
-  <div class="jumbotron ">
+  <div class="jumbotron">
     <div class="container-fluid">
-      <h1 class="display-4">GUTI !</h1>
-
-      <hr class="my-2">
+      <h1 class="display-5">GUTI !</h1>
+      <hr class="my-1">
       <p>
       <h5>An ideal tool to "install" conjugation into yourself.</h5>
       </p>
@@ -33,9 +32,9 @@
   </div>
 
 
-  <div class="container-sm">
+  <div class="container-fluid">
 
-    <p><h3>Get Used To It rather than learn! </h3></p>
+    <p><h4>Get Used To It rather than learn! </h4></p>
 
     <p>The name of this site "GUTI !" comes from this proverb.</p>
 
