--- a/french/static/french/css/custom.css
+++ b/french/static/french/css/custom.css
@@ -3,15 +3,15 @@
     position: relative;
     padding: 2rem 0rem;
     margin-bottom: 0rem;
-    height: 20vh;
-    min-height: 20px;
+    height: 15vh;
+    min-height: 50px;
     background: url(../images/bread-2588182_1920.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .jumbotron-container {
     position: relative;
-    top: 90%;
+    top: 75%;
     transform: translateY(-50%);
 }
 
@@ -36,7 +36,7 @@
 
 .answer {
     margin-bottom: 0px;
-    font-family: 'Bradley Hand', serif;
+    font-family: 'Bradley Hand', 'Segoe Print',serif;
     text-align: center
 }
 
@@ -49,5 +49,5 @@ div.container-fluid {
 
 
 body {
-font-family: 'klee','Segoe UI','EuphemiaUCAS','Avenir Next','Optima','Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴシック',sans-serif
+font-family: 'klee','Segoe UI','Verdana','Arial','Hiragino Mincho Pro',serif
 }
