--- a/french/templates/french/set_fr.html
+++ b/french/templates/french/set_fr.html
@@ -91,6 +91,7 @@
     </div>
 
 
+
     <div class="container-fluid">
       <div class="d-flex justify-content-center">
 
@@ -100,6 +101,22 @@
           </button>
         </div>
 
+      </div>
+    </div>
+
+
+    <div class="container-fluid">
+      <div class="d-flex justify-content-center" style="height:120px">
+        <div class="d-flex row align-items-center">
+          <div class="col">
+            <h3 class="answer">{{result}}</h3>
+            <h3 class="answer">{{word}}</h3>
+            <h3 class="answer">{{words_cnddt}}</h3>
+            <h3 class="answer">{{word}}</h3>
+            <h3 class="answer">{{word}}</h3>
+
+          </div>
+        </div>
       </div>
     </div>
 
