--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-
+  <link rel="stylesheet" type="text/css" href={% static 'french/css/normalize.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/bootstrap.min.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
@@ -27,39 +27,38 @@
   <div class="jumbotron jumbotron-extend">
 
     <div class="container-fluid jumbotron-container">
-          <div class="vh-10">
-      <h4 class="site-name">Habituez-vous<p>plustôt que d'apprendre !</h4>
-      <p></p>
+      <div class="vh-10">
+        <h4 class="site-name">Habituez-vous<p>plustôt que d'apprendre !</h4>
+        <p></p>
+      </div>
     </div>
-        </div>
   </div>
+
 
   <!-- ヘッダ/Nav-Bar -->
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">GUTI ! Français</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">GUTI ! Français</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Practice <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../set_fr">Set</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../list_fr">List</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/.">Home</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Practice <span class="sr-only">(current)</span></a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="../list_fr">List</a>
+      </li>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/.">Home</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 
 
@@ -109,40 +108,87 @@
       </div>
     </div>
 
-  <!-- ボタン -->
+    <!-- ボタン -->
 
-  <form action="" method="post">
-    {% csrf_token %}
+    <form action="" method="post">
+      {% csrf_token %}
 
 
-    <div class="container-fluid">
+      <div class="container-fluid">
 
-      <div class="d-flex justify-content-center">
-      <div class="col-6 text-right">
-          <button type="submit" name="button_question" value="Question" class="btn btn-french-blue ">
-            Question
-          </button>
+        <div class="d-flex justify-content-center">
+          <div class="col-6 text-right">
+            <button type="submit" name="button_question" value="Question" class="btn btn-french-blue ">
+              Question
+            </button>
 
-        </div>
-        <div class="col-6 text-left">
-          <button type="submit" name="button_answer" value="Answer" class="btn btn-french-red">
-            Réponse
-          </button>
-        </div>
+          </div>
+          <div class="col-6 text-left">
+            <button type="submit" name="button_answer" value="Answer" class="btn btn-french-red">
+              Réponse
+            </button>
+          </div>
         </div>
       </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="d-flex justify-content-center" style="height:10hv">
+
+    </div>
+  </div>
+
+<hr>
+
+  <div class="container-fluid">
+
+    <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
+    Mode et Temps
     </div>
 
+    <div class="row">
+      <div class="col-3 col-md-3">{{ form.INDICATIF|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.CONDITIONNEL|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.SUBJONCTIF|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.IMPÉRATIF|as_crispy_field }} </div>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="text-white mx-auto pl-10 bg-dark text-white text-center">
+    Verbes
+    </div>
+    <div class="row">
+      <div class="col-3 col-md-3">{{ form.ER|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.IR|as_crispy_field }} </div>
+      <div class="col-3 col-md-3">{{ form.RE|as_crispy_field }}</div>
+      <div class="col-3 col-md-3">{{ form.Illéguliers|as_crispy_field }}</div>
+    </div>
+  </div>
 
 
 
   </form>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<hr>
 
+  <div class="container-fluid">
+    <div class="d-flex justify-content-center">
+      (links)
+    </div>
+  </div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
 </body>
+
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+    <small>&copy; Copyright 2021 Luciano</small>
+  </div>
+</footer>
 
 </html>
