--- a/french/templates/french/list_fr.html
+++ b/french/templates/french/list_fr.html
@@ -617,3 +617,9 @@
 
 
 </body>
+
+<footer class="footer mt-auto py-3 bg-light" >
+  <div class="container text-right">
+    <small>&copy; Copyright 2021 Luciano</small>
+  </div>
+</footer>
