--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -5,7 +5,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>GUTI !(Test Version)</title>
+  <title>GUTI !</title>
   <meta name='author' content='Luciano'>
   <meta name="description" content='An ideal tool to "install" conjugation into yourself.'>
   <meta name="keywords" content='conjugation,動詞活用'>
@@ -16,7 +16,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 
-  <link rel="stylesheet" href="{% static 'french/css/bootstrap.min.css' %} /">
   <link rel="stylesheet" type="text/css" href={% static 'french/css/bootstrap.min.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
@@ -28,10 +27,10 @@
 
   <div class="jumbotron">
     <div class="container-fluid">
-      <h1 class="display-5">GUTI !</h1>
+      <h1 class="display-4">GUTI !</h1>
       <hr class="my-1">
       <p>
-      <h5>An ideal tool to "install" conjugation into yourself.</h5>
+      <h5>An ideal tool to "install" verb conjugation into yourself.</h5>
       </p>
     </div>
   </div>
@@ -46,7 +45,7 @@
     <p>The name of this site "GUTI !" comes from this proverb.</p>
 
     <p>
-      One of the difficulties in learning foreign languages is the verb conjugation.
+      One of the difficulties in studying foreign languages is the verb conjugation.
       How the native speakers have obtained that of their native language ?
       They did't "learn" it. They just "get used to it". In other words, they have "installed" it naturally through countless times of experiences.<br>
     </p>
@@ -55,7 +54,7 @@
     <h5><strong>We provide you an ideal tool to simulate that.</strong></h5>
     </p>
 
-    <p>Q&As of a verb are provided randomlly, according to the conditions you set (i.e. level of words/mode/tense). Verbs are attentivelly selected (see "List" page) to cover almost all types of conjugation.</p>
+    <p>Q&As of a verb are provided randomlly, according to the conditions you set (i.e. level of conjugation/mode/tense). Verbs are attentivelly selected (see "List" page) to cover almost all types of conjugation.</p>
 
     <p>Then all you have to do is just practicing it over and over again to "install" it into yourself. At anytime & anywhere, to your best satisfaction.</p>
 
@@ -69,10 +68,10 @@
 
     <ol>
       <li>Click the flag of the language you'd like to practice. </li>
-      <li>At first, check conditions you'd like to practice, on the lower section of the page.</li>
+      <li>Before starting practice, DO NOT forget to check conditions you'd like to try, on the lower section of the page.</li>
       <li>Then, start your practice !! </li>
       <li>For the next question, just click "Question" button again.</li>
-      <li>You can change the conditions at anytime you want, by checking/unchecking them. </li>
+      <li>You can change the conditions at anytime you want, by checking/unchecking each check box. </li>
       <li>To know which types & verbs are included in each level, go to "List" page via Navigation Bar. </li>
     </ol>
   </div>
@@ -104,8 +103,8 @@
 </body>
 
 
-<footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
+<footer class="footer mt-auto py-3 bg-light" >
+  <div class="container text-right">
     <small>&copy; Copyright 2021 Luciano</small>
   </div>
 </footer>
