--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -11,9 +11,7 @@
   <meta name="keywords" content='conjugation,動詞活用'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 
 
   <link rel="stylesheet" type="text/css" href={% static 'french/css/bootstrap.min.css' %} />
@@ -68,7 +66,7 @@
 
     <ol>
       <li>Click the flag of the language you'd like to practice. </li>
-      <li>Before starting practice, DO NOT forget to check conditions you'd like to try, on the lower section of the page.</li>
+      <li>Before starting practice, don't forget to check conditions you'd like to try, on the lower section of the page.</li>
       <li>Then, start your practice !! </li>
       <li>For the next question, just click "Question" button again.</li>
       <li>You can change the conditions at anytime you want, by checking/unchecking each check box. </li>
@@ -100,6 +98,11 @@
       </div>
     </div>
 
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    
 </body>
 
 
