--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -43,8 +43,8 @@
     <p>The name of this site "GUTI !" comes from this proverb.</p>
 
     <p>
-      One of the difficulties in studying foreign languages is the verb conjugation.
-      How the native speakers have obtained that of their native language ?
+      One of the difficulties in studying certain foreign languages is the verb conjugation.
+      How the native speakers of those languages have obtained that of their native language ?
       They did't "learn" it. They just "get used to it". In other words, they have "installed" it naturally through countless times of experiences.<br>
     </p>
 
@@ -102,7 +102,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    
+
 </body>
 
 
