normalized css, iphone font

--- a/french/static/french/css/custom.css
+++ b/french/static/french/css/custom.css
@@ -52,5 +52,5 @@ div.container-fluid {
 
 
 body {
-font-family: 'klee','Papyrus','Segoe UI',sans-serif;
+font-family: 'klee','HelveticaNeue-Light','Segoe UI',sans-serif;
 }
