--- a/french/templates/french/list_fr.html
+++ b/french/templates/french/list_fr.html
@@ -12,6 +12,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+  <link rel="stylesheet" type="text/css" href={% static 'french/css/normalize.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/bootstrap.min.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
@@ -67,7 +68,7 @@
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col">Modèle</th>
-          <th scope="col">Mots</th>
+          <th scope="col">Verbs</th>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
