--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -13,7 +13,7 @@
 
 
 
-
+  <link rel="stylesheet" type="text/css" href={% static 'french/css/normalize.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/bootstrap.min.css' %} />
   <link rel="stylesheet" type="text/css" href={% static 'french/css/custom.css' %} />
 
