--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -79,10 +79,10 @@
         <div class="d-flex flex-row">
           <div style="padding:0px;">
 
-            <img src="{% static subject %}" alt="My image">
+            <img src="{% static subject %}" class="img-responsive center-block" alt="My image">
           </div>
           <div style="padding:0px;">
-            <img src="{% static tense %}" alt="My image">
+            <img src="{% static tense %}" class="img-responsive center-block" alt="My image">
           </div>
         </div>
       </div>
