--- a/french/templates/french/main_fr.html
+++ b/french/templates/french/main_fr.html
@@ -170,6 +170,14 @@
 
   </form>
 
+  <hr>
+
+    <div class="container-fluid">
+      <div class="d-flex justify-content-center">
+        (ads)
+      </div>
+    </div>
+
 <hr>
 
   <div class="container-fluid">
