--- a/home/templates/home/guti_home.html
+++ b/home/templates/home/guti_home.html
@@ -52,7 +52,7 @@
     <h5><strong>We provide you an ideal tool to simulate that.</strong></h5>
     </p>
 
-    <p>Q&As of a verb are provided randomlly, according to the conditions you set (i.e. level of conjugation/mode/tense). Verbs are attentivelly selected (see "List" page) to cover almost all types of conjugation.</p>
+    <p>Q&As of a verb conjugation are provided randomlly, according to the conditions you set (i.e. level of conjugation type/mode/tense). Verbs are attentivelly selected (see "List" page) to cover almost all types of conjugation.</p>
 
     <p>Then all you have to do is just practicing it over and over again to "install" it into yourself. At anytime & anywhere, to your best satisfaction.</p>
 
@@ -65,9 +65,9 @@
     <h5>How to use:</h5><br>
 
     <ol>
-      <li>Click the flag of the language you'd like to practice. </li>
-      <li>Before starting practice, don't forget to check conditions you'd like to try, on the lower section of the page.</li>
-      <li>Then, start your practice !! </li>
+      <li>Click the flag of the language you'd like to try, which takes you to "Practice" page. </li>
+      <li>Then firstlly, <span style="border-bottom: solid 2px red;"> check at least more than one box</span>, in "Mode & Tense" and "Verbs" section respectively.</li>
+      <li>Then, start your practice by pressing "Question", then "Answer" button !! </li>
       <li>For the next question, just click "Question" button again.</li>
       <li>You can change the conditions at anytime you want, by checking/unchecking each check box. </li>
       <li>To know which types & verbs are included in each level, go to "List" page via Navigation Bar. </li>
